# rust-sermo

./: Cargo.toml  LICENSE  README.md
examples/: ollama.rs
src/: lib.rs
