
[package]
name = "sermo"
version = "0.1.0"
edition = "2021"
authors = ["Matt Dizak <matt@cicero.sh>"]
license = "MIT"
repository = "https://github.com/mdizak/rust-sermo"
description = "A Rust client library for interacting with various LLM provider APIs"
homepage = "https://github.com/mdizak/rust-sermo"
documentation = "https://docs.rs/sermo"
keywords = ["llm", "api-client", "ai", "chat", "rust"]
categories = ["api-bindings", "artificial-intelligence", "network-programming"]
readme = "README.md"
exclude = ["/examples/*", "/tests/*"]


[dependencies]
atlas-http = { version = "0.2.3", path = "../http" }
indexmap = "2.8.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

